Initial cut for Java 21 support + lots of debug